clusters/holton-talos-prod/cv-jordanholton-com/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cv-jordanholton-com-gateway
  namespace: cv-jordanholton-com
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    hostname: cv.jordanholton.com
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: cv-jordanholton-com-cert
        kind: Secret
    allowedRoutes:
      namespaces:
        from: Same
